--- a/index.html
+++ b/index.html
@@ -6,14 +6,27 @@
     <script src="https://aframe.io/releases/1.0.3/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-environment-component@1.1.0/dist/aframe-environment-component.min.js"></script>
 
-    <title>Montagem de peça em portas</title>
+    <title>Montagem de peças em porta</title>
 </head>
 <body>
     <a-scene>
         
-        <!-- Ambiente -->
-        <a-entity environment="preset: forest; ground: flat; dressingAmount: 50; playArea: 1"></a-entity>
+        <!-- Objetos -->
+        <a-assets>
+            <a-asset-item id="hangar" src="models/hangar/scene.gltf"></a-asset-item>
+            <a-asset-item id="pilar" src="models/pilar/scene.gltf"></a-asset-item>
+            <a-asset-item id="door" src="models/door/scene.gltf"></a-asset-item>
+        </a-assets>
 
+        <!-- Ambiente -->
+        <a-entity environment="preset: forest; ground: flat; dressingAmount: 8; fog: 0.5" scale="0.5 0.5 0.5"position="0 0 0"></a-entity>
+
+        <a-entity gltf-model="#door" scale="0.3 0.3 0.3" position="0 2.7 -5" rotation="-12 -42 0 " color="white"></a-entity>
+        <a-entity gltf-model="#pilar" scale="2 2 1" position="0 0 -5"></a-entity>
+        <a-entity gltf-model="#hangar" scale="0.002 0.002 0.002" position="-15 -0.5 5"></a-entity>
+        <a-box id=peca_1 position="4 2 -5"></a-box>
+        <a-box id=peca_2 position="-3 2 -5"></a-box>
+        
         <!-- Crosshair -->
         <a-camera position="0 2 0">
             <a-cursor color="#2c3e50"></a-cursor>
