--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
         <!-- Ambiente -->
         <a-entity environment="preset: forest; ground: flat; dressingAmount: 8; fog: 0.5; lightPosition: -2 5 -2" scale="0.5 0.5 0.5"position="0 0 0"></a-entity>
 
-        <a-box id="cube" position="-3 2 -5" color="red"></a-box>
+        <a-box id="redCube" position="-3 2 -5" color="red" height="1" width="1" depth="1"></a-box>
+        <a-box id="blueCube" position="-3 2 -5" color="blue" height="0.2" width="0.2" depth="0.2"></a-box>
         
         <!-- Crosshair -->
-        <a-camera position="0 2 0">
-            <a-cursor id="cam" color="#2c3e50"></a-cursor>
+        <a-camera id="cam">
+            <a-cursor color="#2c3e50" id="cursor"></a-cursor>
         </a-camera>
         
     </a-scene>
-    <!-- <script src="script.js"></script> -->
+    <script src="bundle.js"></script>
 </body>
 </html>
