--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <!-- Objetos -->
         <a-asset-item id ="tablado" src="https://raw.githubusercontent.com/KurtRodrigues/Project01/master/modelos%203D%20Porta%20avi%C3%A3o/tablado3-11.gltf" position = "0 0 0" rotation="0 0 0" scale="1 1 1" visible="true"> </a-asset-item>
         <a-gltf-model src="#tablado" shadow="cast: true;" position="-0.3 0.1 -3"> </a-gltf-model>
+        <a-box id="lixeira" position="-3 1.6 0" color="#4CC3D9"></a-box>
+        <a-entity id="text-box" text="value: Hello World;"></a-entity>
 
         <a-gltf-model id ="moldura" src="https://raw.githubusercontent.com/KurtRodrigues/Project01/master/modelos%203D%20Porta%20avi%C3%A3o/moldura-1.gltf" visible="true" position = "-0.1 -1 -1.7" rotation="0 -90 0" shadow="cast: false"> </a-gltf-model>
     
